# temp-system

./: .gitignore  CMakeLists.txt  README.md  partitions.csv
cloud/: SUPABASE.md
cloud/bridge/: .env.example  README.md  bridge.py  requirements.txt
cloud/broker/: docker-compose.yml  gen-certs.sh  mosquitto.conf  passwd.example
cloud/supabase/: config.toml  seed.sql
cloud/supabase/migrations/: 20260701185900_tmt_schema.sql
docs/: REQUISITOS.md
main/: CMakeLists.txt  config.h  cyclic_executive.c  idf_component.yml  interrupt.c  main.c  microkernel.c  net.c  net.h  secrets.h.example  sensors.c  sensors.h  state_machine.c  state_machine.h  storage.c  storage.h
main/certs/: broker_ca.pem
